Create an instance spec-driven ensure endpoint and use it in PHD
